--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -238,18 +238,22 @@
                     </div>
                   </div><!-- End Row Inside -->
                   <div class="row mt-2">
-                    <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                       <div class="detail-text font-weight-bold">Piezas </div>
                       <p class="detail-text">{{detailData.Piezas}}</p>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                       <div class="detail-text font-weight-bold">Peso</div>
                       <p class="detail-text">{{detailData.Peso}} kg.</p>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-3">
                       <div class="detail-text font-weight-bold">Fecha de Arribo</div>
                       <p class="detail-text">{{detailData.FechaArribo}}</p>
                     </div>
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+                      <div class="detail-text font-weight-bold">Fecha de Solicitud</div>
+                      <p class="detail-text">{{detailData.FechaCreacion}}</p>
+                    </div>                    
                   </div><!-- End Row Inside -->
 
 
@@ -326,25 +330,25 @@
                     <div class="col-12">
                       <h6 class="font-weight-bold" >Estatus Transferencia</h6>                        
                     </div>                                    
-                    <div class="col-12">
+                    <!-- <div class="col-12">
                       <h5 class="detail-text">Fecha de Solicitud</h5>
                       <p class="detail-text">{{detailData.FechaCreacion}}</p>                    
-                    </div>    
+                    </div>     -->
 
-                    <div class="col-12">
+                    <!-- <div class="col-12">
                       <h6 class="font-weight-bold">Transferencia</h6>                        
-                    </div>   
+                    </div>    -->
                     <div *ngFor="let estado of estatusTransferencia" class="col-12">   
                       <div class="row justify-content-start">
-                        <div class="col-7 text-left">
+                        <div class="col-12 col-sm-7 col-md-7 col-lg-12 col-xl-7 text-left">
                           <!-- <div class="status-filter__circle status-filter__circle--Solicitada"></div> -->
                           <div class="status-filter__circle status-filter__circle--{{estado.Estado | statusPipe }}"></div>
                           <div class="status-filter__text">
-                            <p class="detail-text">{{estado.Estado}}</p>
+                            <div class="detail-text">{{estado.Estado}}</div>
                           </div>                        
                         </div>
-                        <div class="col-4 text-left">
-                          <h5 class="detail-text">{{estado.Fecha.split(' ')[0] }}</h5>                        
+                        <div class="col-12 col-sm-4 col-md-4 col-lg-12 col-xl-4 text-left">
+                          <h5 class="detail-text">{{estado.Fecha?.slice(0, 16) }}{{estado.Fecha?.slice(-6)}}</h5>                        
                         </div>
                       </div>                      
                     </div>                             
@@ -402,8 +406,9 @@
                           <mat-expansion-panel-header>
                             <div class="col status-filter">            
                               <div class="status-filter__circle status-filter__circle--{{item.Estatus | statusPipe }}"></div>
-                              <div class="status-filter__text"><p> {{item.Estatus}} </p></div>
-                              <p class="detail-text" style="display: inline; padding-left: 5px;">{{item.Fecha.split(' ')[0] }}</p>                                      
+                              <div class="status-filter__text">{{item.Estatus}}</div>
+                              <!-- <p class="detail-text" style="display: inline; padding-left: 5px;">{{item.Fecha.split(' ')[0] }}</p>                                       -->
+                              <div class="detail-text" style="display: inline-block; padding-left: 5px;">{{item.Fecha?.slice(0, -3)}}</div>
                             </div>                                                                                                              
                           </mat-expansion-panel-header>
                           <p class="detail-text">{{item.Usuario}}</p>
