--- a/src/app/aaacesa/finanzas/finanzas.component.html
+++ b/src/app/aaacesa/finanzas/finanzas.component.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1 pl-0">
                   <button (click)="NuevaBusquedaFinanzas()" class="btn btn-pill btn-primary btn-sm"> Nueva
-                    Busqueda</button>
+                    Búsqueda</button>
                 </div>
               </div>
             </div>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1">
                   <button (click)="NuevaBusquedaNotas()" class="btn btn-pill btn-primary btn-sm"> Nueva
-                    Busqueda</button>
+                    Búsqueda</button>
                 </div>
               </div>
             </div>
@@ -200,7 +200,7 @@
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1">
                   <button (click)="NuevaBusquedaComplemento()" class="btn btn-pill btn-primary btn-sm"> Nueva
-                    Busqueda</button>
+                    Búsqueda</button>
                 </div>
               </div>
             </div>
@@ -240,7 +240,7 @@
 
               <!-- RazonSocial Column -->
               <ng-container matColumnDef="RazonSocial">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Razon Social </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Razón Social </th>
                 <td mat-cell *matCellDef="let element"> {{element.RazonSocial}} </td>
               </ng-container>
 
@@ -281,11 +281,11 @@
               <div class="row justify-content-start">
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5 mb-1">
                   <button (click)="EstadosBusqueda()" class="btn btn-pill btn-primary btn-sm"><i
-                      class="fas fa-search"></i> Buscar</button>
+                      class="fas fa-search"></i> Buscar </button>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1">
                   <button (click)="NuevaBusquedaEstados()" class="btn btn-pill btn-primary btn-sm"> Nueva
-                    Busqueda</button>
+                    Búsqueda</button>
                 </div>
               </div>
             </div>
