Custom Icon Font

--- a/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
@@ -248,7 +248,7 @@
                       {{option.Descripcion}}
                     </mat-radio-button>       
                     <mat-radio-button class="col" value="O" color="primary">                      
-                      Otro
+                      OTRO
                     </mat-radio-button>                    
                   </div>                    
                 </mat-radio-group>
