--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,8 @@
 // If you want to add something do it here
 @import "custom";
 
+@import "./vendors/custom-icons/style.css";
+
 /*
  * Component: Info Box
  * -------------------
