--- a/src/app/aaacesa/dialogs/dialog-sesion-alert.component.html
+++ b/src/app/aaacesa/dialogs/dialog-sesion-alert.component.html
@@ -9,17 +9,16 @@
     <div class="container mt-3 mb-5">
         <div class="row">
             <div class="col text-center">
-                    {{data.mensaje}}
+                  <h4>{{data.mensaje}}</h4>  
             </div>
         </div>
         <div class="row">
             <div class="col text-right">
-                <button mat-button class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1" [mat-dialog-close]="data.respuesta" *ngIf="data.respuesta" cdkFocusInitial>
-                    <i class="fa fa-check"></i>
+                <button mat-button class="btn btn-pill btn-primary btn-sm mb-1 mb-md-0 mr-1 ml-1" [mat-dialog-close]="data.respuesta" *ngIf="data.visible" cdkFocusInitial>
                     Renovar sesión
                 </button>
-                <button mat-dialog-close type="button" class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1" aria-label="Close">
-                    Entendido <i class="fa fa-check"></i>
+                <button mat-dialog-close type="button" class="btn btn-pill btn-primary btn-sm mb-1 mb-md-0 mr-1 ml-1" aria-label="Close">
+                    Entendido
                 </button>
             </div>
         </div>
