--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -71,7 +71,7 @@
       <!-- Grid column -->
       <div class="col-md-5 border-right border-white">
         <!-- Content -->
-        <p class="texto text-justify">AAACESA cuenta con más de 24 años de experiencia ofreciendo servicios de manejo, almacenaje y custodia de mercancías de comercio exterior. Con el paso del tiempo, se ha posicionado como el almacén fiscalizado líder en la aduana del Aeropuerto Internacional de la Ciudad de México.</p>
+        <p class="texto text-justify">La mayor infraestructura  en Cadena de Frío en la Aduana del Aeropuerto Internacional de la Ciudad de México.</p>
       </div>
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none">
@@ -114,24 +114,26 @@
         <h6><strong>Correos</strong></h6>
         <ul class="list-unstyled">
           <li><a class="link-footer" href="mailto:clientes@aaacesa.com.mx">clientes@aaacesa.com.mx</a></li>
-          <li><a class="link-footer" href="mailto:marketing@aaacesa.com.mx">marketing@aaacesa.com.mx</a></li>
           <li><a class="link-footer" href="mailto:ventas@aaacesa.com.mx">ventas@aaacesa.com.mx</a></li>
+          <li><a class="link-footer" href="mailto:facturación@aaacesa.com.mx">facturacion@aaacesa.com.mx</a></li>
+          <li><a class="link-footer" href="mailto:juridico@aaacesa.com.mx">juridico@aaacesa.com.mx</a></li>
+          <li><a class="link-footer" href="mailto:credito@aaacesa.com.mx">, credito@aaacesa.com.mx</a></li>
         </ul>
         <div class="text-center">
             <ul class="list-unstyled list-inline">
               <li class="list-inline-item">
-                <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                  <i class="fab fa-facebook-f"></i>
+                <a class="btn-floating btn-sm mx-1" href="https://www.facebook.com/GrupoAaacesa/?modal=admin_todo_tour" >
+                  <i class="fa fa-facebook"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                  <i class="fab fa-twitter"></i>
+                <a class="btn-floating btn-sm mx-1" href="twitter.com/AAACESA_AF">
+                  <i class="fa fa-twitter"></i>
                 </a>
               </li>
-              <li class="list-inline-item">
-                <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                  <i class="fab fa-linkedin-in"></i>
+              <li class="list-inline-item" href="https://www.linkedin.com/company/grupo-aaacesa/?viewAsMember=true">
+                <a class="btn-floating btn-sm mx-1">
+                  <i class="fa fa-linkedin"></i>
                 </a>
               </li>
             </ul>
