--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -97,7 +97,7 @@
             <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
               <div class="card-body text-center">
                   <div class="col align-self-center mt-5">
-                    <img src="/assets/img/brand/loggin.png" width="auto" height="auto" alt="AACESA">
+                    <img src="/assets/img/brand/loggin.png" class="img-fluid" alt="AACESA">
                     <br>
                     <h4 class="mt-3">Bienvenido</h4>
                   </div>
