--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -17,6 +17,21 @@
       </a>
       <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg" *dropdownMenu aria-labelledby="simple-dropdown">
         <div class="dropdown-header text-center"><strong>You have 5 notifications</strong></div>
+        <a href="#" class="dropdown-item">
+          <i class="icon-user-follow text-success"></i> New user registered
+        </a>
+        <a href="#" class="dropdown-item">
+          <i class="icon-user-unfollow text-danger"></i> User deleted
+        </a>
+        <a href="#" class="dropdown-item">
+          <i class="icon-chart text-info"></i> Sales report is ready
+        </a>
+        <a href="#" class="dropdown-item">
+          <i class="icon-basket-loaded text-primary"></i> New client
+        </a>
+        <a href="#" class="dropdown-item">
+          <i class="icon-speedometer text-warning"></i> Server overloaded
+        </a>
       </div>
     </li>
     <li class="nav-item dropdown" dropdown placement="bottom right">
