--- a/src/app/aaacesa/dialogs/dialog-sesion-alert.component.html
+++ b/src/app/aaacesa/dialogs/dialog-sesion-alert.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="row">
             <div class="col text-right">
-                <button mat-button class="btn btn-pill btn-primary btn-sm mb-1 mb-md-0 mr-1 ml-1" [mat-dialog-close]="data.respuesta" *ngIf="data.visible" cdkFocusInitial>
+                <button mat-button class="btn btn-pill btn-primary btn-sm mb-1 mb-md-0 mr-1 ml-1" [mat-dialog-close]="data.respuesta" cdkFocusInitial>
                     Renovar sesión
                 </button>
                 <button mat-dialog-close type="button" class="btn btn-pill btn-primary btn-sm mb-1 mb-md-0 mr-1 ml-1" aria-label="Close">
