--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -13,25 +13,22 @@
   <ul class="nav navbar-nav">
     <li class="nav-item dropdown d-md-down-none" dropdown placement="bottom right">
       <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
-        <i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span>
+        <i class="icon-bell"></i><span *ngIf="notificacionesArray.length" class="badge badge-pill badge-danger">{{notificacionesActiveCount}}</span>
       </a>
       <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg" *dropdownMenu aria-labelledby="simple-dropdown">
-        <div class="dropdown-header text-center"><strong>You have 5 notifications</strong></div>
-        <a href="#" class="dropdown-item">
-          <i class="icon-user-follow text-success"></i> New user registered
-        </a>
-        <a href="#" class="dropdown-item">
-          <i class="icon-user-unfollow text-danger"></i> User deleted
-        </a>
-        <a href="#" class="dropdown-item">
-          <i class="icon-chart text-info"></i> Sales report is ready
-        </a>
-        <a href="#" class="dropdown-item">
-          <i class="icon-basket-loaded text-primary"></i> New client
-        </a>
-        <a href="#" class="dropdown-item">
-          <i class="icon-speedometer text-warning"></i> Server overloaded
-        </a>
+        <div *ngIf="notificacionesArray.length" class="dropdown-header text-center"><strong>Tienes {{notificacionesArray.length}} notificaciones</strong></div>
+        <div *ngIf="!notificacionesArray.length" class="dropdown-header text-center"><strong>No hay notificaciones</strong></div>
+
+        <div (click)="lecturaNotifcacion(item.Id)" *ngFor="let item of notificacionesArray" class="notificacion">
+          <div *ngIf="!item.Read" class="notificacion__status">Nueva</div>
+          <div class="notificacion__head">{{item.Head}} <span class="notificacion__fecha">{{item.Fecha}}</span></div>                    
+          <div class="notificacion__body">{{item.Body}}</div>                              
+        </div>        
+        <!-- <div class="notificacion">
+          <div class="notificacion__status">Nueva</div>
+          <div class="notificacion__head">Prenotificaciones Abandono <span class="notificacion__fecha">21/05/2019</span></div>                    
+          <div class="notificacion__body">La guía Master 178-39821782 House HRM3756 causará abandono en 15 días.</div>                              
+        </div>         -->
       </div>
     </li>
     <li class="nav-item dropdown" dropdown placement="bottom right">
