--- a/src/app/aaacesa/calculadora/calculadora.component.html
+++ b/src/app/aaacesa/calculadora/calculadora.component.html
@@ -4,14 +4,35 @@
     <div class="card">
       <div class="card-body">
         <div class="row">
-          <div class="col-12">
-            <span class="label label-default d-none d-lg-block small ml-3">Calcula el costo de  las maniobras, los datos marcados con * son obligatorios</span>
-          </div>
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <span class="label label-default d-none d-lg-block small mr-auto ml-3"><small class="text-muted">Ingresa los datos solicitados a continuación.</small></span>
+            <span class="label label-default d-none d-lg-block small mr-auto"><small class="text-muted">Simulación del cálculo del costo de  las maniobras.</small></span>
           </div>
         </div><!-- end ROW -->
         <form [formGroup]="calculoForm">
+          <div class="row mt-2">
+            <div class="col-md-6 styled-select">
+              <mat-form-field class="input-full-width">
+                <input matInput type="text"  [(ngModel)]="calculoManiobra.Master" [textMask]="{mask: masterMask, guide: false, modelClean: true}" formControlName="tMaster" name="tMaster"  placeholder="Guía Master" required />
+                <mat-error *ngIf="calculoForm.get('tMaster').errors?.required">
+                    El campo Guía Master es <strong>requerido</strong>
+                </mat-error> 
+                <mat-error *ngIf="calculoForm.get('tMaster').errors?.pattern">
+                    El campo Guía Master es <strong>incorrecto</strong>
+                </mat-error>
+              </mat-form-field>
+            </div><!-- end col -->
+            <div class="col-md-6 styled-select">
+              <mat-form-field class="input-full-width">
+                <input matInput type="text"  [(ngModel)]="calculoManiobra.House" formControlName="tHouse" placeholder="Guía House" pattern="^[+-]?([0-9]*[.])?[0-9]+$" required/>
+                <mat-error *ngIf="calculoForm.get('tHouse').errors?.required">
+                    El campo Guía House es <strong>requerido</strong>
+                </mat-error> 
+                <mat-error *ngIf="calculoForm.get('tHouse').errors?.pattern">
+                    El campo Guía House es <strong>incorrecto</strong>
+                </mat-error>
+              </mat-form-field>
+            </div><!-- end col -->
+          </div><!-- end ROW -->
           <div class="row mt-2">
             <div class="col-12 styled-select">
               <mat-form-field class="input-full-width">
@@ -25,7 +46,7 @@
                 </mat-error>                  
               </mat-form-field>
             </div><!-- end col -->
-          </div>
+          </div><!-- end ROW -->
           <div class="row mt-2">
             <div class="col-12 styled-select">
               <mat-form-field class="input-full-width">
@@ -68,7 +89,7 @@
           <div class="row mt-2">
             <div class="col-md-6 styled-select">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="calculoManiobra.FechaEntrada" formControlName="fechaEntradaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placement="top"  placeholder="Fecha de Entrada (dd/mm/AAAA)" required >
+                <input matInput type="text" [(ngModel)]="calculoManiobra.FechaEntrada" formControlName="fechaEntradaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placement="top"  placeholder="Fecha de Entrada" required >
                 <mat-error *ngIf="calculoForm.get('fechaEntradaCtrl').errors?.required">
                     El campo Fecha de Entrada es <strong>requerido</strong>
                 </mat-error> 
@@ -76,7 +97,7 @@
             </div><!-- end col -->
             <div class="col-md-6 styled-select">
               <mat-form-field class="input-full-width">
-                  <input matInput type="text" [(ngModel)]="calculoManiobra.FechaSalida" formControlName="fechaSalidaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placement="top" placeholder="Fecha de Salida (dd/mm/AAAA)" required >
+                  <input matInput type="text" [(ngModel)]="calculoManiobra.FechaSalida" formControlName="fechaSalidaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placement="top" placeholder="Fecha de Salida" required >
                   <mat-error *ngIf="calculoForm.get('fechaSalidaCtrl').errors?.required">
                       El campo Fecha de Salida es <strong>requerido</strong>
                   </mat-error>  
@@ -91,6 +112,14 @@
             </div>
           </div><!-- end ROW -->
         </form>
+        <div class="row mt-2">
+          <div class="col-12">
+            <span class="label label-default d-none d-lg-block small">Los datos marcados con * son obligatorios.</span>
+          </div>
+          <!-- <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <span class="label label-default d-none d-lg-block small">Este simulador, no es la cotización final, sujeto a cambio.</span>
+          </div> -->
+        </div><!-- end ROW -->
       </div><!-- Card Body-->
     </div><!--END Card calculadora -->
   </div><!--END Card calculadora right side-->
@@ -162,3 +191,8 @@
     </div><!--END Card calculadora -->    
   </div><!--END CARD resultados calculadora left side-->
 </div>
+<div class="row mb-2 mt-0">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="font-size: 0.55rem; font-weight: bold; float:left;" >
+      * Este simulador, no es la cotización final, sujeto a cambio.
+    </div>
+  </div><!-- end ROW -->
