--- a/src/app/aaacesa/exportaciones/exportaciones.component.html
+++ b/src/app/aaacesa/exportaciones/exportaciones.component.html
@@ -136,12 +136,12 @@
             
             <ng-container matColumnDef="FechaEntradaMercancia">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Entrada Mercancía </th>
-              <td mat-cell *matCellDef="let element"> {{element.FechaEntradaMercancia.split(' ')[0]}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.FechaEntradaMercancia?.slice(0, 16) }}{{element.FechaEntradaMercancia?.slice(-6)}} </td>
             </ng-container>
 
             <ng-container matColumnDef="FechaCreacion">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Creacion </th>
-              <td mat-cell *matCellDef="let element"> {{element.FechaCreacion.split(' ')[0]}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.FechaCreacion}} </td>
             </ng-container>
                         
             <ng-container matColumnDef="Estatus">
@@ -310,7 +310,8 @@
                             <div class="col status-filter">            
                               <div class="status-filter__circle status-filter__circle--{{item.Estatus | statusPipe }}"></div>
                               <div class="status-filter__text">{{item.Estatus}}</div>
-                              <div class="detail-text" style="display: inline-block; padding-left: 5px;">{{item.Fecha?.slice(0, -3)}}</div>
+                              <!-- <div class="detail-text" style="display: inline-block; padding-left: 5px;">{{item.Fecha?.slice(0, -3)}}</div> -->
+                              <div class="detail-text" style="display: inline-block; padding-left: 5px;">{{item.Fecha}}</div>
                             </div>                                                                                                              
                           </mat-expansion-panel-header>
                           <p class="detail-text">{{item.Usuario}}</p>
