--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -147,7 +147,7 @@
 
             <ng-container matColumnDef="FechaSalida">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Salida </th>
-              <td mat-cell *matCellDef="let element">{{element.FechaSalida.split(' ')[0]}}</td>
+              <td mat-cell *matCellDef="let element">{{element.FechaSalida}}</td>
             </ng-container>  
 
             <ng-container matColumnDef="Patente">
@@ -328,7 +328,8 @@
                                   <div class="col status-filter">            
                                     <div class="status-filter__circle status-filter__circle--{{item.Estatus | statusPipe }}"></div>
                                     <div class="status-filter__text">{{item.Estatus}}</div>
-                                    <div class="detail-text" style="display: inline-block; padding-left: 5px;">{{item.Fecha?.slice(0, -3)}}</div>                                      
+                                    <!-- <div class="detail-text" style="display: inline-block; padding-left: 5px;">{{item.Fecha?.slice(0, -3)}}</div> -->
+                                    <div class="detail-text" style="display: inline-block; padding-left: 5px;">{{item.Fecha}}</div>                                      
                                   </div>                                                                                                              
                                 </mat-expansion-panel-header>
                                 <p class="detail-text">{{item.Usuario}}</p>
