--- a/src/app/aaacesa/calculadora/calculadora.component.html
+++ b/src/app/aaacesa/calculadora/calculadora.component.html
@@ -108,7 +108,7 @@
           <div class="row mt-3">
             <div class="col-lg-12 text-center">
               <button (click)="clean(); "  class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Limpiar</button>            
-              <button  (click)="calcularManiobra()" class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Enviar</button>
+              <button  (click)="calcularManiobra()" class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Calcular</button>
             </div>
           </div><!-- end ROW -->
         </form>
