--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -83,14 +83,14 @@
     <!-- Grid row -->
     <div class="row">
       <!-- Grid column -->
-      <div class="col-md-5 border-right border-white">
+      <div class="col-md-3 border-right border-white">
         <!-- Content -->
         <p class="texto text-justify">La mayor infraestructura  en Cadena de Frío en la Aduana del Aeropuerto Internacional de la Ciudad de México.</p>
       </div>
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none">
       <!-- Grid column -->
-      <div class="col-md-1 mr-1">
+      <div class="col-md-2 mr-1">
         <h6><strong>Servicios</strong></h6>
         <ul class="dash">
           <li>Prealertas</li>
@@ -103,7 +103,7 @@
       <!-- Grid column -->
       <hr class="clearfix w-100 d-md-none">
       <!-- Grid column -->
-      <div class="col-md-1">
+      <div class="col-md-2">
         <h6><strong>&nbsp;</strong></h6>
         <ul class="dash">
           <li>Consulta de mercancías</li>
@@ -131,27 +131,27 @@
           <li><a class="link-footer" href="mailto:ventas@aaacesa.com.mx">ventas@aaacesa.com.mx</a></li>
           <li><a class="link-footer" href="mailto:facturación@aaacesa.com.mx">facturacion@aaacesa.com.mx</a></li>
           <li><a class="link-footer" href="mailto:juridico@aaacesa.com.mx">juridico@aaacesa.com.mx</a></li>
-          <li><a class="link-footer" href="mailto:credito@aaacesa.com.mx">, credito@aaacesa.com.mx</a></li>
+          <li><a class="link-footer" href="mailto:credito@aaacesa.com.mx">credito@aaacesa.com.mx</a></li>
         </ul>
         <div class="text-center">
-            <ul class="list-unstyled list-inline">
-              <li class="list-inline-item">
-                <a class="btn-floating btn-sm mx-1" href="https://www.facebook.com/GrupoAaacesa/?modal=admin_todo_tour" >
-                  <i class="fa fa-facebook"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn-floating btn-sm mx-1" href="twitter.com/AAACESA_AF">
-                  <i class="fa fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item" href="https://www.linkedin.com/company/grupo-aaacesa/?viewAsMember=true">
-                <a class="btn-floating btn-sm mx-1">
-                  <i class="fa fa-linkedin"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="list-unstyled list-inline">
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm link-footer mx-1" href="https://www.facebook.com/GrupoAaacesa/?modal=admin_todo_tour" >
+                <i class="icon-social-facebook"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm link-footer mx-1" href="twitter.com/AAACESA_AF">
+                <i class="icon-social-twitter"></i>
+              </a>
+            </li>
+            <li class="list-inline-item" href="https://www.linkedin.com/company/grupo-aaacesa/?viewAsMember=true">
+              <a class="btn-floating btn-sm link-footer mx-1">
+                <i class="icon-social-linkedin"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
       <!-- Grid column -->
     </div>
