--- a/src/app/views/resetpassword/resetpassword.component.html
+++ b/src/app/views/resetpassword/resetpassword.component.html
@@ -15,10 +15,10 @@
                     <div class="col-md-12">
                       <mat-form-field class="input-full-width">
                         <mat-label>Nueva contraseña</mat-label>
-                        <input class="text-right" [type]="hide ? 'password' : 'text'" matInput  [(ngModel)]="newPassword" name="passwordUser" id="passwordUser"formControlName="passwordUser" required pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,10}$" >
+                        <input [type]="hide ? 'password' : 'text'" matInput  [(ngModel)]="newPassword" name="passwordUser" id="passwordUser"formControlName="passwordUser" required pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,10}$" >
                         <mat-icon matPrefix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                         <mat-error *ngIf="form.hasError('required', 'passwordUser')">
-                          El campo Contraseña es <strong>requerido</strong>
+                            * Contraseña no valida
                         </mat-error>
                       </mat-form-field> 
                     </div>
@@ -27,13 +27,10 @@
                     <div class="col-md-12">
                       <mat-form-field class="input-full-width">
                         <mat-label>Confirma la contraseña</mat-label>
-                        <input class="text-right" [type]="hide ? 'password' : 'text'" matInput [(ngModel)]="confPasw" formControlName="passwConfirm" name="passwConfirm" id="passwConfirm" [errorStateMatcher]="matcher" required>
+                        <input [type]="hide ? 'password' : 'text'" matInput [(ngModel)]="confPasw" formControlName="passwConfirm" name="passwConfirm" id="passwConfirm" [errorStateMatcher]="matcher" required>
                         <mat-icon matPrefix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                        <mat-error *ngIf="form.hasError('required','passwConfirm')">
-                            El campo Confirmar Contraseña es <strong>requerido</strong>
-                          </mat-error>
-                        <mat-error *ngIf="form.hasError('notSame')">
-                          Las Contraseñas son <strong>diferentes</strong>
+                        <mat-error *ngIf="form.hasError('required','passwConfirm') || form.hasError('notSame')">
+                          * Contraseña no valida
                         </mat-error>
                       </mat-form-field> 
                     </div>
@@ -56,10 +53,11 @@
             </div>
             <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
               <div class="card-body text-center">
-                  <div class="col align-self-center mt-5">
-                    <img src="/assets/img/brand/logo.png" alt="AACESA">
-                    <h2>Bienvenido</h2>
-                  </div>
+                <div class="col align-self-center mt-5">
+                  <img src="/assets/img/brand/loggin.png" class="img-fluid" alt="AACESA">
+                  <br>
+                  <h4 class="mt-3">Bienvenido</h4>
+                </div>
               </div>
             </div>
           </div>
