--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -84,7 +84,7 @@
         </mat-card-header>
         <a href="http://www.aaacesa.com.mx/Aaacesa/Noticias"><img #aaacesa src="http://www.aaacesa.com.mx/Content/images/new-noticia-CadenaFrio.jpg" alt="Imagen Noticias" ></a>
         <mat-card-content><br>
-        <p style="color:#183964; text-align: center"><b>AAACESA a la vanguardia en infraestructura en cade de frio.</b></p>
+        <p style="color:#183964; text-align: center"><b>AAACESA a la vanguardia en infraestructura en cadena de frío.</b></p>
       </mat-card-content>
         </mat-card>
       </div>
@@ -100,11 +100,11 @@
           <mat-card class="Imagen" style="margin-bottom:20px; height:257px; padding:0">
             <div class="row">
               <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4" style="padding-right:0">
-              <a href="http://t21.com.mx/"><img src="assets/img/portada(1).jpg" alt="Imagen card" style="height:257px"/></a>
+              <a href="http://t21.com.mx/"><img class="img-fluid" src="assets/img/portada(1).jpg" alt="Imagen card" style="height:257px"/></a>
             </div>
             <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8" >
               <div>
-              <a href="https://www.aicm.com.mx/"><img class="airport" src="https://casetasdemexico.com.mx/wp-content/uploads/2016/02/AEROPUERTO.jpg" alt="Imagen Aeropuerto" style="height: 155px" ></a>
+              <a href="https://www.aicm.com.mx/"><img class="airport img-fluid" src="https://casetasdemexico.com.mx/wp-content/uploads/2016/02/AEROPUERTO.jpg" alt="Imagen Aeropuerto" style="height: 155px" ></a>
             </div>
 
             
@@ -136,7 +136,7 @@
 
       
       <div class="row">
-        <div  *ngIf="charts" class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 ">
+        <div  class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 ">  <!-- *ngIf="charts" -->
           <mat-card class="grafica">
           <!-- <div class="card"> -->
             <!-- <div class="card-body"> -->
@@ -160,7 +160,7 @@
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
           <!-- <div class="card">
             <div class="card-body"> -->
-              <mat-card>
+              <mat-card class="mercancia">
               <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3" style="padding: 5px 5px 5px 15px">
                   <small style="font-size:11px; font-weight:bold">Master</small>
@@ -196,8 +196,8 @@
                 </div>
 
               </div>
-              <div class="col-xs-12" style="color:aqua; margin-bottom:14px"><mat-divider></mat-divider></div>
-              <div class="col-xs-12 text-center"><a [routerLink]="" (click)="redirect('mercancias')" style="color:#1E82BA">Ver todo</a></div>
+              <!-- <div class="col-xs-12" style="color:aqua; margin-bottom:14px"><mat-divider></mat-divider></div>
+              <div class="col-xs-12 text-center"><a [routerLink]="" (click)="redirect('mercancias')" style="color:#1E82BA">Ver todo</a></div> -->
             </mat-card>
             </div>
 
