--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -14,6 +14,10 @@ img {
   height: 285px;
 }
 
+.mercancia {
+  height: 285px;
+}
+
 @media(max-width:450px){
      .grafica {
       display: none;
