--- a/src/app/aaacesa/mercancias/mercancias.component.html
+++ b/src/app/aaacesa/mercancias/mercancias.component.html
@@ -143,7 +143,7 @@
         <!-- END TAB -->
 
         <!-- TAB INFO SALIDAS MERCANCIAS -->
-        <mat-tab label="Info Salida Mercancía">  
+        <mat-tab label="Información Salidas">  
           <div class="container mb-3 mt-5 mr-0 ml-0" *ngIf="visible" >
             <div class="row">
               <div class="table-responsive" *ngIf="visibleIS">
@@ -218,8 +218,8 @@
 
                   <!-- Recoleccion Column -->
                   <ng-container matColumnDef="Recoleccion">
-                    <th mat-header-cell *matHeaderCellDef> Fecha Recoleccion </th>
-                    <td mat-cell *matCellDef="let element"> {{element.Recoleccion}} </td>
+                    <th mat-header-cell *matHeaderCellDef> Fecha Recolección </th>
+                    <td mat-cell *matCellDef="let element"> {{element.FechaRecoleccion}} </td>
                   </ng-container>
 
                   <!-- FechaDocumentosDisponibles Column -->
